# mechanix-gui

./: .gitignore  Cargo.toml  config.toml  release-please-config.json  runner.sh  runner_lock_screen.sh
action_bar/: Cargo.toml  mecha_action_bar_1.0.0.bb  settings.yml  settings.yml.example
action_bar/src/: errors.rs  main.rs
action_bar/src/event_handler/: zbus.rs
action_bar/src/settings/: mod.rs
action_bar/src/theme/: mod.rs
action_bar/src/widgets/: action_widget.rs  styled_container.rs
app_dock/: .gitignore  Cargo.toml  mecha_app_dock_1.0.0.bb  settings.yml  settings.yml.example  theme.yml
app_dock/src/: errors.rs  main.rs
app_dock/src/settings/: mod.rs
app_dock/src/theme/: mod.rs
app_dock/src/widgets/: app.rs  mod.rs  styled_container.rs
app_drawer/: .gitignore  Cargo.toml  mecha_app_drawer_1.0.0.bb  settings.yml  settings.yml.example  theme.yml
app_drawer/src/: errors.rs  main.rs
app_drawer/src/settings/: mod.rs
app_drawer/src/theme/: mod.rs
app_drawer/src/widgets/: mod.rs
app_manager/: Cargo.toml
app_manager/src/: main.rs
app_switcher/: Cargo.toml  settings.yml  settings.yml.example  theme.yml
app_switcher/src/: errors.rs  main.rs
app_switcher/src/services/: app_manager.rs  mod.rs
app_switcher/src/settings/: mod.rs
app_switcher/src/theme/: mod.rs
app_switcher/src/widgets/: app_widget.rs  mod.rs  running_app.rs
apps/: Cargo.toml
apps/camera/: Cargo.toml  settings.yml.example
apps/camera/src/: camera.rs  config.rs  constants.rs  main.rs
apps/commons/custom_utils/: Cargo.toml
apps/commons/custom_widgets/: Cargo.toml
apps/files/: Cargo.toml  settings.yml.example
apps/files/src/: constants.rs  errors.rs  folder_options.rs  gui.rs  main.rs
apps/settings/: Cargo.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
apps/settings-app/: Cargo.toml  build.rs  settings.yml  settings.yml.example
apps/settings-app/src/: components.rs  constants.rs  errors.rs  gui.rs  main.rs  types.rs  utils.rs
apps/settings/src/: app.css  errors.rs  main.rs
apps/settings/src-tauri/: Cargo.toml  tauri.conf.json
background/: Cargo.toml  settings.yml.example
background/src/: errors.rs  main.rs
background/src/event_handler/: mod.rs  zbus.rs
background/src/handlers/: mod.rs
background/src/process/: handler.rs
background/src/settings/: mod.rs
commons/command/: Cargo.toml
commons/command/src/: errors.rs  lib.rs
commons/echo_client/: Cargo.toml
commons/echo_client/src/: lib.rs
commons/networkmanager/: Cargo.toml
commons/networkmanager/src/: access_point.rs  connection.rs  device.rs  interfaces.rs  ip4_config.rs  lib.rs  network_manager.rs  statistics.rs
commons/policykit/: Cargo.toml
commons/policykit/src/: authority.rs  lib.rs  types.rs
commons/services/: Cargo.toml
commons/services/src/: lib.rs
commons/wlroots/: Cargo.toml
commons/wlroots/src/: errors.rs  example.rs  lib.rs  wl_input_method.rs  wlr_toplevel_handler.rs
config/: Cargo.toml
config/cli/: Cargo.toml
config/client/: Cargo.toml
config/server/: Cargo.toml
greeter/: .gitignore  Cargo.toml  settings.yml.example  users.yml  users.yml.example
greeter/src/: errors.rs  main.rs
greeter/src/pages/: home.rs  mod.rs  password_authentication.rs  pin_authentication.rs  power_options.rs
greeter/src/settings/: mod.rs
greeter/src/theme/: mod.rs
greeter/src/users/: mod.rs
greeter/src/widgets/: mod.rs  password_key.rs  password_text.rs  user_card.rs
homescreen/: Cargo.toml  settings.yml.example
homescreen/src/: main.rs
homescreen/src/handlers/: mod.rs
homescreen/src/services/: app_manager.rs
homescreen/src/settings/: mod.rs
homescreen/src/theme/: mod.rs
launcher/: Cargo.toml  settings.yml  settings.yml.example
launcher/src/: errors.rs  main.rs
launcher/src/settings/: mod.rs
osk/: Cargo.toml  settings.yml.example
osk/src/: errors.rs  main.rs
osk/src/event_handler/: zbus.rs
osk/src/process/: handler.rs  service.rs
osk/src/settings/: mod.rs
pam/: Cargo.toml
pam/etc/pam.d/: mechanix-shell
pam/src/: entries.rs  exitcode.rs  lib.rs  passwords.rs
pam/src/pam/: constants.rs  conv.rs  items.rs  macros.rs  mod.rs  module.rs
rotation/: Cargo.toml  settings.yml.example
rotation/src/: errors.rs  main.rs
rotation/src/backends/: mod.rs  sway.rs  wlroots.rs  xorg.rs
rotation/src/handlers/: mod.rs
rotation/src/settings/: mod.rs
services/: Cargo.toml  Cross.toml  readme.md
services/client/zbus/: Cargo.toml
services/ctl/bluetooth/: Cargo.toml
services/ctl/date-time/: Cargo.toml
services/ctl/display/: Cargo.toml
services/ctl/host-metrics/: Cargo.toml
services/ctl/hw-buttons/: Cargo.toml
services/desktop/: Cargo.toml
services/system/: Cargo.toml
settings_drawer/: .gitignore  Cargo.toml  mecha_settings_drawer_1.0.0.bb  settings.yml  settings.yml.example  theme.yml
settings_drawer/src/: errors.rs  main.rs
shell/: Cargo.toml  Cross.toml
shell/.cargo/: config
shell/app-drawer/: Cargo.toml  settings.yml.example
shell/app-switcher/: Cargo.toml  settings.yml.example
shell/greeter/: .gitignore  Cargo.toml  settings.yml.example  users.yml.example
shell/home-screen/: Cargo.toml  settings.yml.example
shell/keyboard/: Cargo.toml  settings.yml.example
shell/launcher/: .gitignore  Cargo.toml  settings.yml.example
shell/lock-screen/: Cargo.toml  settings.yml.example
shell/notification/: Cargo.toml  settings.yml.example
shell/on-screen-display/: Cargo.toml  settings.yml.example
shell/polkit-agent/: Cargo.toml  settings.yml.example
shell/power-options/: Cargo.toml  settings.yml.example
shell/rotate-daemon/: Cargo.toml
shell/settings-panel/: Cargo.toml  settings.yml.example
shell/status-bar/: Cargo.toml  settings.yml.example
shell/wallpaper-daemon/: Cargo.toml
status_bar/: .gitignore  Cargo.toml  build.rs  mecha_status_bar_1.0.0.bb  settings.yml  settings.yml.example  theme.yml
status_bar/.cargo/: config.toml
status_bar/proto/: battery_ctrl.proto  bluetooth_manager.proto  network_manager.proto
status_bar/src/: errors.rs  main.rs
(+814 files in other folders)
