[workspace]
default-members = ["status_bar"]
members = ["status_bar", "app_drawer", "action_bar", "lock_screen", "app_dock", "settings_drawer", "commons/custom_widgets", "launcher", "commons/custom_utils", "commons/wlroots", "commons/process", "commons/echo_client"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
description = "Collection of UI elements for a UI Shell for Mecha devices, supports wlroots based compositors"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"