[package]
name = "mecha_action_bar"
description = "Action Bar for Mecha Launcher, supports wlroots based compositors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
relm4 = "0.7.0-beta.1"
relm4-components = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
tonic = "0.9.2"
gtk4-layer-shell = { version = "0.1.5", optional = true }
tokio = { version = "1.33", features = ["full"] }
echo_client = { path = "../commons/echo_client"}
zbus = "3.14.1"
wayland-client = "0.31.1"
wlroots = { path = "../commons/wlroots"}
process = { path = "../commons/process"}

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = ["layer-shell"]
layer-shell = ["gtk4-layer-shell"]