[package]
name = "mecha_app_switcher"
description = "App switcher for Mecha Launcher, supports wlroots based compositors"
documentation = "https://docs.mecha.so"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
relm4 = "0.7.0-beta.1"
relm4-components = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
tonic = "0.9.2"
#gtk4-layer-shell = { version = "0.1.5", optional = true }
tokio = { version = "1.33", features = ["full"] }
wayland-protocols-async = "1.0.0"
services = { path = "../commons/services"}
command = { path = "../commons/command"}
custom_utils = { path = "../commons/custom_utils"}
desktop_ini_utils = { path = "../commons/desktop_ini_utils"}
custom_widgets = { path = "../commons/custom_widgets"}
indexmap = "2.1.0"

[build-dependencies]
tonic-build = "0.9.2"

#[features]
#default = ["layer-shell"]
#layer-shell = ["gtk4-layer-shell"]