[workspace]
resolver = "2"
members = [
    "settings-app", "camera",  "files"
]
default-members = ["settings-app", "camera",  "files"]

[workspace.package]
version = "0.1.6"
authors = [
   "Sweta <swetar@mechasystems.com>", 
   "Naman <namana-mecha@mechasystems.com>"
]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = [
    "linux",
    "shell",
    "mobile",
    "gui",
    "ui",
    "graphics",
    "interface",
    "widgets",
]

[workspace.dependencies]
mctk_core = { git = "https://github.com/mecha-org/mctk.git" }
mctk_macros = { git = "https://github.com/mecha-org/mctk.git" }
mctk_smithay = { git = "https://github.com/mecha-org/mctk.git" }