[package]
name = "mechanix-config"
description = "Configuration system for the Mechanix shell, services and gui apps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = ["cli", "client", "server"]

[[bin]]
name = "mechanix-config"
path = "cli/src/main.rs"

[workspace.package]
version = "0.1.0"
authors = ["Dhruvesh Baria <dhruveshb@mechasystems.com>", "Shoaib Merchant <shoaibm@mechasystems.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = ["linux", "shell", "mobile", "gui", "ui", "graphics", "interface", "widgets"]

[workspace.dependencies]
