[package]
name = "mecha_launcher"
description = "Mecha Launcher"
version = "1.0.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
envmnt = "0.10.4"
mecha_status_bar = { path = "../status_bar"}
relm4 = "0.7.0-beta.1"
relm4-components = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }