[package]
name = "pam-mechanix"
documentation = "https://docs.mecha.so"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"

[lib]
name = "pam_mechanix"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "mechanix_chkpwd"
path = "src/bin/chkpwd.rs"

[[bin]]
name = "mechanix_setpwd"
path = "src/bin/setpwd.rs"

[dependencies]
libc = "0.2.155"
sha256 = "1.5.0"
clap = { version = "4.5.7", features = ["derive"] }