[package]
name = "rotation"
description = "Rotation service used to rotate screen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
echo_client = { path = "../commons/echo_client"}
services = { path = "../commons/services"}
zbus = "3.14.1"
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0.71"
tonic = "0.9.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
command = { path = "../commons/command"}
glob = "0.3.1"
wayland-client = "0.31.0"
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
regex = "1"
wayland-protocols-async = { path = "../../wayland-protocols-async" }

