[package]
name = "rotation"
description = "Rotation service used to rotate screen"
documentation = "https://docs.mecha.so"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-launcher"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
echo_client = { path = "../commons/echo_client"}
services = { path = "../commons/services"}
zbus = "3.14.1"
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0.71"
tonic = "0.9.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
command = { path = "../commons/command"}
glob = "0.3.1"
wayland-client = "0.31.0"
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
regex = "1"
wayland-protocols-async = "1.0.0"

