[workspace]
resolver = "2"
members = [
    "ctl/bluetooth",
    "ctl/date-time",
    "ctl/display",
    "ctl/keyboard",
    "ctl/language",
    "ctl/network",
    "ctl/power",
    "ctl/sharing",
    "ctl/sound",
    "ctl/users",
    "ctl/host-metrics",
    "ctl/hw-buttons",
    "system/server/dbus",
    "system/client/dbus",
    "desktop/client/dbus",
    "desktop/server",
    "store/server",
    "store/client/dbus",
]
default-members = ["system/server/dbus", "desktop/server"]


[workspace.package]
version = "0.1.6"
authors = [
    "Dhruvesh Baria <dhruveshb@mechasystems.com>",
    "Shoaib Merchant <shoaibm@mechasystems.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = [
    "linux",
    "shell",
    "mobile",
    "gui",
    "ui",
    "graphics",
    "interface",
    "widgets",
]

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
zbus = { version = "4.1.2", features = ["tokio"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
dotenv = "0.15.0"
serde_json = "1.0"
mechanix_system_dbus_client = { path = "./system/client/dbus" }
mechanix_desktop_dbus_client = { path = "./desktop/client/dbus" }
mechanix_desktop_dbus_server = { path = "./desktop/server" }
mechanix_store_server = { path = "./store/server" }
mechanix_store_client = { path = "./store/client" }
command = { path = "../commons/command"}
logind = { path = "../commons/logind"}
upower = { path = "../commons/upower"}
pam-mechanix = { path = "../pam"}
policykit = { path = "../commons/policykit"}
futures = "0.3.30"
evdev = { version = "0.12.2", features = ["tokio"] }
futures-util = "0.3.30"
wayland-protocols-async = { git = "https://github.com/mecha-org/wayland-protocols-async.git" }