[package]
name = "mechanix-shell"
description = "Touch optimized GUI shell for handheld devices running on wayland compositors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = [
    "app-drawer",
    "greeter",
    "home-screen",
    "keyboard",
    "lock-screen",
    "polkit-agent",
    "rotate-daemon",
    "settings-panel",
    "status-bar",
    "wallpaper-daemon",
    "commons/*",
    "app-switcher",
    "power-options",
    "notification"
]

[[bin]]
name = "mechanix-wallpaper-daemon"
path = "wallpaper-daemon/src/main.rs"

[workspace.package]
version = "0.1.0"
authors = ["Akshay Raina <akshayr@mechasystems.com>", "Shoaib Merchant <shoaibm@mechasystems.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = ["linux", "shell", "mobile", "gui", "ui", "graphics", "interface", "widgets"]

[workspace.dependencies]
mctk_core = { git = "ssh://git@github.com/mecha-org/mctk.git", rev = "62ecb174c8dbd1c09dbd57fb224602308d030dda" }
mctk_smithay = { git = "ssh://git@github.com/mecha-org/mctk.git", rev = "62ecb174c8dbd1c09dbd57fb224602308d030dda" }
mctk_macros = { git = "ssh://git@github.com/mecha-org/mctk.git", rev = "62ecb174c8dbd1c09dbd57fb224602308d030dda" }
mechanix_system_dbus_client = { path = "../services/system/client/dbus" }
mechanix_desktop_dbus_client = { path = "../services/desktop/client/dbus" }
mechanix_store_server = { path = "../services/store/server" }
mechanix_store_client = { path = "../services/store/client/dbus" }
smithay-client-toolkit = "0.18.0"
image = { version = "0.24.9", features = ["png", "jpeg"] }
futures = "0.3.30"
wayland-protocols-async = { git = "ssh://git@github.com/mecha-org/wayland-protocols-async.git", rev = "a69b28552f5385d8b12a3e72ae6db9629b455323" }
chrono = "0.4.31"
command = { path = "../commons/command"}
desktop_entries = { path = "./commons/desktop_entries"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3.30"
echo_client = { path = "./commons/echo-client"}
mechanix_status_bar_components = { path = "./commons/status-bar"}
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
anyhow = "1.0.79"
tokio = { version = "1.33", features = ["full"] }
zbus = { version = "4.1.2", features = ["tokio"] }
logind = { path = "../commons/logind"}
upower = { path = "../commons/upower"}
policykit = { path = "../commons/policykit"}
clap = { version = "4.5.4", features = ["derive", "env"] }
users = "0.11.0"
keyring = "2.3.3"
pam-client = "0.5.0"
serde_json = "1.0.118"