[package]
name = "mechanix-camera"
description = "System camera app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mctk_core = { git="https://github.com/namana-mecha/mctk.git", branch="dev-camera" }
mctk_smithay = { git="https://github.com/namana-mecha/mctk.git", branch="dev-camera" }
mctk_macros = { git="https://github.com/namana-mecha/mctk.git", branch="dev-camera" }
mctk_camera = { git="https://github.com/namana-mecha/mctk.git", branch="dev-camera" }

anyhow = { version = "1.0.75", features = ["backtrace"]}
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
gstreamer-video = "0.23.2"
image = { version = "0.24.9", features = ["jpeg"] }
jpeg-decoder = "0.3.0"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.7"
smithay-client-toolkit = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
rgb = "0.8.50"
serde = "1.0.217"
serde_yaml = "0.9.34"
dirs = "5.0.1"
const_format = "0.2.34"

[package.metadata.deb]
name = "mechanix-camera"
depends = "$auto"
assets = [
    # binary
    [
        "../target/release/mechanix-camera",
        "/usr/bin/",
        "755",
    ],
    #assets
    [
        "src/assets/**/*",
        "/usr/share/mechanix/apps/camera/assets/",
        "644",
    ],

    # settings
    [
        "settings.yml.example",
        "/etc/mechanix/apps/camera/settings.yml",
        "644",
    ],
    # desktop file
    [
        "src/assets/linux/org.mechanix.camera.desktop", 
        "/usr/share/applications/", 
        "644"
    ],

]
